2014-11-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/ldap.el: Require password-cache.
	(ldap-password-read): New function.
	(ldap-search-internal): Call ldap-password-read when it is
	configured to be called.

2014-11-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/eudc-vars.el (eudc-expansion-overwrites-query): Change
	default to nil.

2014-11-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/eudc.el (eudc-expand-inline): Ignore text properties of
	string-to-expand.

2014-11-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/eudc-vars.el (eudc-inline-expansion-format): Default to a
	format that includes first name and surname.

2014-11-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/eudc-vars.el (eudc-inline-query-format): Change default to
	query email and first name instead of surname.

2014-11-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/ldap.el (ldap-search-internal): Support new-style LDAP URIs.

2014-11-13  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/eudc-vars.el (eudc-server): Adjust docstring to mention
	eudc-server-hotlist.
	(eudc-server-hotlist): Move from eudc.el and make defcustom.
	* net/eudc.el (eudc-server-hotlist): Move to eudc-vars.el.
	(eudc-set-server): Allow setting protocol to nil.
	(eudc-expand-inline): Support hotlist-only expansions when server
	is not set.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Version 24.4 released.

2014-10-15  Alan Mackenzie  <acm@muc.de>

	* cus-edit.el (custom-command-apply): Specify the return value in
	the doc string.
	(Custom-reset-standard): Save custom-file (e.g. .emacs) only when
	custom-command-apply has returned non-nil.

2014-10-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp--local-variables-1): Handle `quote'.
	Backported (bug#18688).

2014-10-14  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/tabulated-list.el (tabulated-list-mode):
	Force bidi-paragraph-direction to 'left-to-right'.  This fixes